--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,7 +5,7 @@ on:
     - cron: "0 0 * * *" # jalan setiap hari jam 00:00 UTC
   push:
     branches:
-      - main
+      - master
 
 jobs:
   generate:
